--- a/TeasmCompanion/TeasmCompanion.csproj
+++ b/TeasmCompanion/TeasmCompanion.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -61,4 +61,7 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TeasmBrowserAutomation\TeasmBrowserAutomation.csproj" />
+  </ItemGroup>
 </Project>
