--- a/TeasmBrowserAutomation/TeasmBrowserAutomation.csproj
+++ b/TeasmBrowserAutomation/TeasmBrowserAutomation.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.8.0" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.1.0" />
+    <PackageReference Include="Otp.NET" Version="1.2.2" />
     <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
     <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="5.0.0" />
     <PackageReference Include="Tmds.DBus" Version="0.9.1" />
